load(
    "@npm//@bazel/typescript:index.bzl",
    "ts_library",
)

package(default_visibility = ["//:__pkg__"])

exports_files([
    "closure/zone_externs.js",
])

ts_deps = [
    "@npm//@types",
    "@npm//rxjs",
]

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    visibility = "//visibility:public",
    deps = ts_deps,
)

filegroup(
    name = "externs",
    srcs = ["lib/closure/zone_externs.js"],
  visibility = "//visibility:public",
)
