load(
    "@npm//@bazel/typescript:index.bzl",
    "ts_library",
)

package(
    default_visibility = ["//visibility:public"],
)

exports_files([
    "closure/zone_externs.js",
])

ts_deps = [
    "@npm//@types",
    "@npm//rxjs",
]

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    deps = ts_deps,
)

filegroup(
    name = "externs",
    srcs = ["lib/closure/zone_externs.js"],
)
